feat: update method and swagger
