# docs/swagger.json
@@ -31,7 +31,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
                     },
@@ -126,7 +126,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with bearer and token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -184,9 +184,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -206,6 +213,69 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "type": "object"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new article version with reference from an article ID with the given parameters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "articles"
+                ],
+                "summary": "Create a new article version with reference from an article ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with bearer and token. The token can be accessed via api /auth/login.",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Create Article Version Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/params.CreateArticleVersionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/params.CreateArticleVersionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errs.ValidationError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -230,9 +300,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "MUST HAVE PERMISSION DeleteArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
+                        "description": "MUST HAVE PERMISSION DeleteArticle. Fill with bearer and token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -279,9 +356,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -304,62 +388,6 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "type": "object"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Create a new article version with reference from an article ID with the given parameters",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "articles"
-                ],
-                "summary": "Create a new article version with reference from an article ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Create Article Version Request",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/params.CreateArticleVersionRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/params.CreateArticleVersionResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errs.ValidationError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
@@ -386,9 +414,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
+                        "description": "Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise, if the token is present and the user has permission to read drafted and archived articles, the token can be used to access draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "integer",
@@ -439,9 +474,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with bearer and token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -504,9 +546,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "MUST HAVE PERMISSION UpdateStatusArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
+                        "description": "MUST HAVE PERMISSION UpdateStatusArticle. Fill with bearer and token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "articleID",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -661,7 +710,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token for accessing draft, published, and archived articles. If authorization is not provided default is showing published articles",
+                        "description": "Fill with bearer and token for accessing draft, published, and archived articles. If authorization is not provided default is showing published articles",
                         "name": "Authorization",
                         "in": "header"
                     }
@@ -703,7 +752,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. ",
+                        "description": "Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
                     },
@@ -758,7 +807,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login.",
+                        "description": "MUST HAVE PERMISSION CreateArticle. Fill with bearer and token. The token can be accessed via api /auth/login.",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -816,7 +865,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. ",
+                        "description": "Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. ",
                         "name": "Authorization",
                         "in": "header"
                     },
