# internal/rest/tag_handler.go
@@ -31,7 +31,7 @@ type (
 //	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
-//	@Param			Authorization	header		string					true	"MUST HAVE PERMISSION CreateArticle. Fill with Bearer token. The token can be accessed via api /auth/login."
+//	@Param			Authorization	header		string					true	"MUST HAVE PERMISSION CreateArticle. Fill with bearer and token. The token can be accessed via api /auth/login."
 //	@Param			body			body		params.CreateTagRequest	true	"Create Tag Request"
 //	@Success		201				{string}	string					"created"
 //	@Failure		400				{object}	errs.ValidationError
@@ -67,7 +67,7 @@ func (ah *TagHandler) CreateTagHandler(w http.ResponseWriter, r *http.Request) {
 //	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
-//	@Param			Authorization	header		string	false	"fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. "
+//	@Param			Authorization	header		string	false	"Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. "
 //	@Param			sort			query		string	false	"Sort by usage_count:asc | usage_count:desc | trending_score:asc | trending_score:desc | name:asc | name:desc | last_used:asc | last_used:desc"
 //	@Success		200				{array}		params.GetTagResponse
 //	@Failure		400				{object}	errs.ValidationError
@@ -119,7 +119,7 @@ func (ah *TagHandler) GetTagsHandler(w http.ResponseWriter, r *http.Request) {
 //	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
-//	@Param			Authorization	header		string	false	"fill with Bearer token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. "
+//	@Param			Authorization	header		string	false	"Fill with bearer and token. The token can be accessed via api /auth/login. If authorization is not provided, the default behavior is showing only published articles. Otherwise if the token is appered and user habe a permission to read drafted and archiver article, the token can be used to accessing draft, published, and archived articles. "
 //	@Param			name			path		string	true	"Tag name"
 //	@Success		200				{object}	params.GetTagResponse
 //	@Failure		400				{object}	errs.ValidationError
